tests/tests/errors/2026-1.vb
'#compiler-options:/warnaserror:1
'#compiler-message:Command line warning BC2026 : warning number '1' for the option 'warnaserror' is either not configurable or not valid
'#exit-code:0